110102  Avoid looping on double faults in exception handler.
        Revert the disk report to use kilobytes to avoid breaking
          compatibility with scripts that parse it.
        Document commandline for installing under a different service name.
        Release Mrbig-0.22.0.
 
101112  Remove 5kB hardcoded report size limit in another place.

101025  Clean up external script handling and bump default report size
        limit to 16kB.
        Release MrBig-0.21.0.

101008  Restore Windows 2000 support that was broken in 0.20.0 due to
        lack of AddVectoredExceptionHandler support in kernel32.dll.

101006  Fix support for >2TB disks in disk.c

100929  rewrote mrsend() and recv_cfg() to use non-blocking sockets w/ timeout

100823  build with mingw-w64-1.0 / gcc-4.5.1 toolchain 
	import sources to qbranch SVN
	add usage()
	ship releases w/ debugging info so gdb, addr2line et. al work
	fix warnings
	remove DOS linebreaks
	fix 64-bit pointer cast issues
	build with -O2 instead of -O3
	log crashes to c:\mrbig_crash.txt with time, stacktrace and ctx dump
	released version 0.20.0

100401	Commented out #include <windows.h> in mrbig.h.

090121	Allow the service to be installed with another service name:
	mrbig -iSomeOtherServiceName
	mrbig -uSomeOtherServiceName
	This allows a second instance of Mr Big to be installed and used
	for cluster monitoring.
	Make the maximum report size configurable:
	report_size XXX
	The default size is still 5000 bytes.

090116	msgs.c: Close hTestKey after use.
	Released 0.19.1.

090114	cfg.c: Use cfg.cache- as temporary file when reading configuration.
	In case of error, write the error to cfg.cache- as well as the log.
	Released 0.19.0.

090113	mrbig.c: New directive to set options:
	option [option_name]
	This is used to selectively disable tests:
	option no_cpu|no_disk|no_wmi et al
	All disabled tests except wmi and ext get clear status.

090112	msgs.c: New setting fastmsgs speeds up message processing by only